make top page & relink

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,8 @@
-<h1>Create a New User</h1>
+<h1>TOP</h1>
 
-<%= render 'form' %>
+
+
+<p><%= link_to 'Rails Home', rs_home_index_path %></p>
+
+<p><%= link_to 'JavaScript Home', js_home_index_path %> </p>
+
