--- a/app/views/js_home/index.html.erb
+++ b/app/views/js_home/index.html.erb
@@ -1,6 +1,8 @@
-<h1>JavaScriptでフォームを追加</h1>
+<h1>JavaScriptでNew Userフォーム</h1>
 
 <button id="btn">フォーム</button>
 <div id="form_place"></div>
 
 <%= javascript_include_tag 'js_form' %>
+
+<%= link_to 'Return TOP', root_path %>
