--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,7 @@
 <h1>TOP</h1>
 
-
+<p><%= link_to 'post tags', post_path %></p>
 
 <p><%= link_to 'Rails Home', rs_home_index_path %></p>
 
 <p><%= link_to 'JavaScript Home', js_home_index_path %> </p>
-
