--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1>TOP</h1>
 
-<p><%= link_to 'post tags', post_path %></p>
+<p><%= link_to 'post tags', posts_path %></p>
 
 <p><%= link_to 'Rails Home', rs_home_index_path %></p>
 
